[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/bugsplode4.png" type="Texture" id=1]
[ext_resource path="res://art/bugsplode3.png" type="Texture" id=2]
[ext_resource path="res://art/bugsplode1.png" type="Texture" id=3]
[ext_resource path="res://art/bugsplode2.png" type="Texture" id=4]
[ext_resource path="res://art/mantis.png" type="Texture" id=5]
[ext_resource path="res://art/mantis_purple.png" type="Texture" id=6]
[ext_resource path="res://scripts/Mantis.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": false,
"name": "destroy",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[node name="Mantis" type="Area2D"]
scale = Vector2( 0.08, 0.08 )
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( -25, 252, -199, 71, -235, 29, -232, -42, -129, -141, -111, -154, -76, -149, -41, -133, 5, -122, 81, -142, 109, -152, 182, -96, 235, -35, 213, 44, 27, 252 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.675

[node name="ShotPos" type="Position2D" parent="."]
position = Vector2( 0, 362.5 )

[connection signal="area_entered" from="." to="." method="_on_Mantis_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
